@@ -23,7 +23,7 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>A</functionality>
+  <functionality>D</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
   <comments>
@@ -51,6 +51,14 @@
     PCL-6 drivers ("lj5gray"/"lj5mono", "pxlmono") but without
     success.&lt;p&gt;
     
+    Unfortunately, the new LaserJet 1010/1012/1015 series seems not to
+    be absolutely compatible with older HP printers or it has a
+    firmware bug. Sometimes it happens that the printer stops working
+    and reports the error "&lt;tt&gt;Unsupported Personality:
+    PCL&lt;/tt&gt;". It only continues working when one kills the job
+    and power-cycles the printer. So up to now it is not recommended
+    to buy this printer.&lt;p&gt;
+
     Please test the printer with these drivers in all available
     resolutions and also with special options as toner saving. REt,
     toner density, ... Try also the PPD files for the HP LaserJet 4050
