@@ -26,7 +26,7 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>A</functionality>
+  <functionality>D</functionality>
   <driver>hpijs</driver>
   <!--no "contrib_url"-->
   <comments>
@@ -41,6 +41,14 @@
     HP laser printers as the LaserJet 4 or LaserJet 1100. So it can
     not only be used with standard drivers as HPIJS, GIMP-Print, or
     "ljet4" but also print plain text.&lt;p&gt;
+
+    Unfortunately, the new LaserJet 1010/1012/1015 series seems not to
+    be absolutely compatible with older HP printers or it has a
+    firmware bug. Sometimes it happens that the printer stops working
+    and reports the error "&lt;tt&gt;Unsupported Personality:
+    PCL&lt;/tt&gt;". It only continues working when one kills the job
+    and power-cycles the printer. So up to now it is not recommended
+    to buy this printer.&lt;p&gt;
 
     Please test the printer with all drivers listed here in all
     available resolutions and also with special options as toner
