@@ -1,3 +1,10 @@
+2003-11-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
+	  printer/HP-LaserJet_1015.xml: Updated text and rating of the
+	  LaserJet 101x series as they do not work reliably as PCL-5e
+	  printers.
+
 2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README: Updated "Dependencies" section.
